src/project/snapshots/pixi__project__virtual_packages__tests__test_get_minimal_virtual_packages.linux-64.snap
---
source: src/project/virtual_packages.rs
assertion_line: 226
expression: packages
---
[
    GenericVirtualPackage {
        name: PackageName {
            normalized: None,
            source: "__unix",
        },
        version: Version {
            version: [[0], [0]],
            local: [],
        },
        build_string: "0",
    },
    GenericVirtualPackage {
        name: PackageName {
            normalized: None,
            source: "__linux",
        },
        version: Version {
            version: [[0], [5], [10]],
            local: [],
        },
        build_string: "0",
    },
    GenericVirtualPackage {
        name: PackageName {
            normalized: None,
            source: "__glibc",
        },
        version: Version {
            version: [[0], [2], [17]],
            local: [],
        },
        build_string: "0",
    },
    GenericVirtualPackage {
        name: PackageName {
            normalized: None,
            source: "__archspec",
        },
        version: Version {
            version: [[0], [1]],
            local: [],
        },
        build_string: "x86_64",
    },
]
