src/project/snapshots/pixi__project__virtual_packages__tests__test_get_minimal_virtual_packages.osx-64.snap
---
source: src/project/virtual_packages.rs
expression: packages
---
[
    Unix,
    Archspec(
        Archspec {
            spec: "x86_64",
        },
    ),
    Osx(
        Osx {
            version: Version {
                version: [[0], [10], [15]],
                local: [],
            },
        },
    ),
]
