src/project/snapshots/pixi__project__virtual_packages__tests__test_get_minimal_virtual_packages.osx-arm64.snap
---
source: src/project/virtual_packages.rs
expression: packages
---
[
    Unix,
    Osx(
        Osx {
            version: Version {
                version: [[0], [11], [0]],
                local: [],
            },
        },
    ),
]
