src/project/snapshots/pixi__project__virtual_packages__tests__test_get_minimal_virtual_packages.win-64.snap
---
source: src/project/virtual_packages.rs
expression: packages
---
[
    GenericVirtualPackage {
        name: PackageName {
            normalized: None,
            source: "__win",
        },
        version: Version {
            version: [[0], [10], [0]],
            local: [],
        },
        build_string: "0",
    },
    GenericVirtualPackage {
        name: PackageName {
            normalized: None,
            source: "__archspec",
        },
        version: Version {
            version: [[0], [1]],
            local: [],
        },
        build_string: "x86_64",
    },
]
